--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     # 使用cron表达式定义任务运行的时间
     # github使用utc时间
+    - cron: '3 2 * * *' #北京时间6点
+    - cron: '3 6 * * *' #北京时间6点
+    - cron: '3 10 * * *' #北京时间6点
+    - cron: '3 14 * * *' #北京时间6点
+    - cron: '3 18 * * *' #北京时间6点
     - cron: '3 22 * * *' #北京时间6点
   workflow_dispatch:
 
